<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gameware</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_login">Login</string>
    <string name="label_validade_preco">Validade do Preço</string>
    <string name="label_descricao">Descrição</string>
    <string name="label_senha">Senha</string>
    <string name="label_cliente">Cliente</string>
    <string name="label_gerente">Gerente</string>
    <string name="label_jogo">Jogo</string>
    <string name="label_tempo_uso">Tempo de Uso</string>
    <string name="label_horas">Hora(s)</string>
    <string name="label_minutos">Minuto(s)</string>
    <string name="label_ate">até</string>
    <string name="label_total">Total</string>
    <string name="label_qtde_estoque">Quantidade no Estoque</string>
    <string name="label_faturamento_periodo">Faturamento por Período</string>
    <string name="label_console">Console</string>
    <string name="label_categoria">Categoria</string>
    <string name="label_validade">Validade</string>
    <string name="label_desconto">Desconto</string>
    <string name="label_valor">Valor</string>
    <string name="label_valor_hora">Valor por Hora</string>
    <string name="label_definir_desconto">Definir Desconto</string>
    <string name="label_tipo_desconto">Tipo de Desconto</string>
    <string name="label_rend_periodo">Rendimentos no Período: </string>
    <string name="label_nome_completo">Nome Completo</string>
    <string name="label_nome_produto">Nome do Produto</string>
    <string name="label_data_nascimento">Data de Nascimento</string>
    <string name="label_sexo_F">F</string>
    <string name="label_sexo_M">M</string>
    <string name="label_sexo">Sexo</string>
    <string name="label_rg">RG</string>
    <string name="label_telefone">Telefone</string>
    <string name="label_email">E-Mail</string>
    <string name="label_editar">Editar</string>
    <string name="button_cadastrar_cliente">Cadastrar Novo Cliente</string>
    <string name="button_cadastrar_gerente">Cadastrar Novo Gerente</string>
    <string name="button_cadastrar_produto">Cadastrar Novo Produto</string>
    <string name="button_conectar">Conectar</string>
    <string name="button_consoles">Consoles</string>
    <string name="button_dados_cadastrais">Dados Cadastrais</string>
    <string name="button_excluir">Excluir</string>
    <string name="button_ficha_financeira">Ficha Financeira</string>
    <string name="button_produtos">Produtos</string>
    <string name="button_relatorios">Relatórios</string>
    <string name="button_rendimentos_cliente">Visualizar Rendimentos por Cliente</string>
    <string name="button_rendimentos_console">Visualizar Rendimentos por Console</string>
    <string name="button_valor_utilizacao">Valor por Utilização do Serviço</string>
    <string name="button_ok">OK</string>
    <string name="button_ger_clientes">Gerenciamento de Clientes</string>
    <string name="button_ger_gerentes">Gerenciamento de Gerentes</string>
    <string name="button_ger_financeiro">Gerenciamento Financeiro da Loja</string>
    <string name="button_rel_dia">Faturamento Diário</string>
    <string name="button_rel_sem">Faturamento Semanal</string>
    <string name="button_rel_men">Faturamento Mensal</string>
    <string name="button_rel_anu">Faturamento Anual</string>
    <string name="button_rel_per">Faturamento Outro Período</string>
    <string name="prompt_cliente">Selecione um Cliente</string>
    <string name="prompt_console">Selecione um Console</string>
    <string name="prompt_minuto">Selecione a quantidade de Minutos</string>
    <string name="prompt_jogo">Selecione um Jogo</string>
    <string name="title_activity_tela_menu_gerente">Menu - Gerente</string>
    <string name="title_activity_consoles">Consoles</string>
    <string name="title_activity_tela_consoles">Consoles</string>
    <string name="title_activity_tela_jogo">Jogos</string>
    <string name="title_activity_tela_financeiro_loja">Gerenciamento Financeiro da Loja</string>
    <string name="title_activity_tela_relatorios">Relatórios</string>
    <string name="title_activity_calendario">Seleção do Período</string>
    <string name="title_activity_tela_registro_locacao">Registro de Utilização de Serviço</string>
    <string name="title_activity_tela_faturamento_periodo">Faturamento por Período</string>
    <string name="title_activity_tela_produtos">Produtos</string>
    <string name="title_activity_tela_calendario_periodo">Seleção do Período</string>
    <string name="title_activity_tela_gerenciar_cliente">Gerenciamento de Clientes</string>
    <string name="title_activity_tela_dados_cadastrais">Dados Cadastrais</string>
    <string name="title_activity_tela_ficha_financeira">Ficha Financeira</string>
    <string name="title_activity_tela_cadastro_cliente">Cadastro de Cliente</string>
    <string name="title_activity_tela_gerenciar_valores_servico">Valor por Utilização do Serviço</string>
    <string name="title_activity_tela_menu_administrador">Menu - Administrador</string>
    <string name="title_activity_tela_gerenciar_gerente">Gerenciamento de Gerentes</string>
    <string name="title_activity_tela_dados_cadastrais_gerente">Dados Cadastrais</string>
    <string name="title_activity_tela_cadastro_gerente">Cadastrar Gerente</string>
    <string name="title_activity_tela_rendimentos">Rendimentos</string>
    <string name="title_activity_tela_rendimentos_console">Rendimentos</string>
    <string name="title_activity_tela_selecao_cliente_ficha_financeira">Seleção de Cliente</string>
    <string name="title_activity_tela_cadastro_produto">Cadastro de Produtos</string>
    <string name="title_activity_tela_dados_cadastrais_produto">Dados Cadastrais</string>

</resources>