<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TelaGerenciarValoresServico" >

    <TextView
        android:id="@+id/label_console"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/label_console"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/seletor_console"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/label_console"
        android:prompt="@string/prompt_console"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/label_valor_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seletor_console"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/label_valor_hora"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/text_valor_hora"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_valor_hora"
        android:layout_centerHorizontal="true"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/button_ok" />

    <CheckBox
        android:id="@+id/opcao_definir_desconto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_ok"
        android:layout_centerHorizontal="true"
        android:text="@string/label_definir_desconto"
        android:onClick="onButtonClick" />

    <TextView
        android:id="@+id/label_tipo_desconto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_valor_hora"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/label_tipo_desconto"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />
    
	<Spinner
        android:id="@+id/seletor_tipo_desconto"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/label_tipo_desconto"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

</RelativeLayout>