<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TelaCadastroProduto" >

    <TextView
        android:id="@+id/label_descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seletor_produto"
        android:layout_centerHorizontal="true"
        android:text="@string/label_descricao"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/text_descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_descricao"
        android:layout_centerHorizontal="true"
        android:ems="8"
        android:inputType="text" />

    <TextView
        android:id="@+id/label_nome_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_descricao"
        android:layout_centerHorizontal="true"
        android:text="@string/label_categoria"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/seletor_categoria"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_below="@+id/label_nome_produto"
        android:layout_centerHorizontal="true"
        android:enabled="false" />

    <TextView
        android:id="@+id/label_validade_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_qtde_estoque"
        android:layout_centerHorizontal="true"
        android:text="@string/label_validade_preco"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/text_validade_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_validade_preco"
        android:layout_centerHorizontal="true"
        android:ems="8"
        android:enabled="false"
        android:inputType="date" />

    <TextView
        android:id="@+id/label_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/label_nome_produto"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/seletor_produto"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_below="@+id/label_categoria"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/label_tipo_desconto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_validade_preco"
        android:layout_centerHorizontal="true"
        android:text="@string/label_tipo_desconto"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/seletor_desconto"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_below="@+id/label_tipo_desconto"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:id="@+id/checkBox_validade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/seletor_desconto"
        android:onClick="onButtonClick"
        android:text="@string/label_validade"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/label_qtde_estoque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/seletor_categoria"
        android:text="@string/label_qtde_estoque"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/text_qtde_estoque"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_qtde_estoque"
        android:layout_toLeftOf="@+id/label_descricao"
        android:ems="8"
        android:inputType="number" />

    <EditText
        android:id="@+id/text_valor"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/label_validade_preco"
        android:layout_toRightOf="@+id/label_descricao"
        android:ems="8"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/label_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_valor"
        android:layout_toRightOf="@+id/label_validade_preco"
        android:text="@string/label_valor"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button_ok"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/checkBox_desconto"
        android:layout_alignRight="@+id/label_qtde_estoque"
        android:onClick="onButtonClick"
        android:text="@string/button_ok" />

    <CheckBox
        android:id="@+id/checkBox_desconto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox_validade"
        android:layout_alignBottom="@+id/checkBox_validade"
        android:layout_alignLeft="@+id/text_valor"
        android:onClick="onButtonClick"
        android:text="@string/label_desconto"
        android:textSize="12sp" />

</RelativeLayout>
