<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TelaFaturamentoPeriodoActivity" >

    <TextView
        android:id="@+id/label_faturamento_periodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/label_faturamento_periodo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/label_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_faturamento_periodo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/label_total"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/label_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_total"
        android:layout_centerHorizontal="true"
        android:text="R$500.00"
        android:textColor="#00BFFF"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/button_rendimentos_console"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_rendimentos_cliente"
        android:layout_centerHorizontal="true"
        android:onClick="onButtonClick"
        android:textStyle="bold"
        android:text="@string/button_rendimentos_console" />

    <Button
        android:id="@+id/button_rendimentos_cliente"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_rendimentos_console"
        android:layout_centerVertical="true"
        android:onClick="onButtonClick"
        android:textStyle="bold"
        android:text="@string/button_rendimentos_cliente" />
    
</RelativeLayout>