<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TelaMenuGerenteActivity" >

    <Button
        android:id="@+id/button_ger_financeiro"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_money"
        android:gravity="left|center_vertical"
        android:onClick="onButtonClick"
        android:text="@string/button_ger_financeiro"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_ger_clientes"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_clients"
        android:layout_alignLeft="@+id/button_ger_financeiro"
        android:layout_below="@+id/button_ger_financeiro"
        android:gravity="left|center_vertical"
        android:onClick="onButtonClick"
        android:text="@string/button_ger_clientes"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_produtos"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_products"
        android:layout_alignLeft="@+id/button_ger_clientes"
        android:layout_below="@+id/button_ger_clientes"
        android:gravity="left|center_vertical"
        android:onClick="onButtonClick"
        android:text="@string/button_produtos"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_consoles"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_produtos"
        android:drawableRight="@drawable/ic_consoles"
        android:gravity="left|center_vertical"
        android:onClick="onButtonClick"
        android:text="@string/button_consoles"
        android:textStyle="bold" />
    
	<ImageView
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_ger_financeiro"
        android:layout_alignParentBottom="true"
        android:onClick="onButtonClick"
        android:src="@drawable/ic_logout"
        tools:ignore="ContentDescription" />

</RelativeLayout>
